--- a/s3.env
+++ b/s3.env
@@ -1,4 +1,4 @@
-OBJECTSTORE_S3_HOST=89.46.21.224
+OBJECTSTORE_S3_HOST=
 OBJECTSTORE_S3_BUCKET=kano.pilot.drive.sunet.dev
 OBJECTSTORE_S3_KEY=
 OBJECTSTORE_S3_SSL=true
